Cycles doesn't render on GPU or causes GPU driver to crash #40429

Closed
opened 2014-05-29 19:53:11 +02:00 by Vlad Mafteiu Scai · 13 comments

System Information
Win 8 64, 2 MSI Lightning 780 gtx

Blender Version
Broken: (example: 2.71 90449f9, see splash screen)
Worked: (optional)

Cycles doesn't render on GPU or causes GPU driver to crash. Try rendering the animation and at some time render will stop suddenly or to be more precise nothing is rendered as in black frames. Sometimes when rendering a single frame a Cuda sync fail message will be shown however most often there are no shown errors.

I cannot pipoint the exact cause of the issue. It started just after I added the procedural musgrave texture. Maybe that could cause issues.

Exact steps for others to reproduce the error
Check attached blend file.

**System Information** Win 8 64, 2 MSI Lightning 780 gtx **Blender Version** Broken: (example: 2.71 90449f9, see splash screen) Worked: (optional) **Cycles doesn't render on GPU or causes GPU driver to crash. Try rendering the animation and at some time render will stop suddenly or to be more precise nothing is rendered as in black frames. Sometimes when rendering a single frame a Cuda sync fail message will be shown however most often there are no shown errors.** I cannot pipoint the exact cause of the issue. It started just after I added the procedural musgrave texture. Maybe that could cause issues. **Exact steps for others to reproduce the error** Check attached blend file.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @00Ghz

Added subscriber: @00Ghz

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

There is no attached file here.

Also please note, Cycles bugs don't belong into Addons. It's BF-Blender / Cycles.

There is no attached file here. Also please note, Cycles bugs don't belong into Addons. It's BF-Blender / Cycles.

Here it is. Not sure what happened.

And not sure why it was in add on section as well.Headset.blend

Headset.blend1

Here it is. Not sure what happened. And not sure why it was in add on section as well.[Headset.blend](https://archive.blender.org/developer/F91883/Headset.blend) [Headset.blend1](https://archive.blender.org/developer/F91884/Headset.blend1)

Added subscriber: @brecht

Added subscriber: @brecht

Does disabling "Persistent Images" or "Cache BVH" in the Performance panel avoid the issue?

Does disabling "Persistent Images" or "Cache BVH" in the Performance panel avoid the issue?

Cache BVH no. But it does seem to make the problem appear later as not in the first frames.

And Persistent Images does seem to solve the issue for whatever reason.

Cache BVH no. But it does seem to make the problem appear later as not in the first frames. And Persistent Images does seem to solve the issue for whatever reason.

Added subscriber: @candreacchio

Added subscriber: @candreacchio

How hot are the cards getting (you mentioned 2 780s)... could it be a cooling issue? Check with GPU-Z

How long does it take to render one frame?

How hot are the cards getting (you mentioned 2 780s)... could it be a cooling issue? Check with GPU-Z How long does it take to render one frame?

This issue was referenced by 2305e3289b

This issue was referenced by 2305e3289bcfced0e56d4d0fac8d525cb847d46e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2305e3289b.

Closed by commit 2305e3289b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40429
No description provided.