Fix T40429: cycles CUDA + use persistent images problem.